--- a/covid-frontend/package.json
+++ b/covid-frontend/package.json
@@ -9,7 +9,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "bootstrap": "^4.3.1",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
