--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-navigation/native": "^5.7.6",
+    "@react-navigation/stack": "^5.9.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -12,6 +14,9 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-native": "^0.63.3",
+    "react-native-safe-area-context": "^3.1.8",
+    "react-native-web": "^0.14.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^4.3.2"
